<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SearchEventActivity"
    android:background="#000000">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/mainLayout"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/search_string"
                    android:id="@+id/stringSearch"
                    android:textColor="#ffffff"
                    android:layout_marginRight="5dp" />

                <EditText
                    android:layout_width="351dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtSearch"
                    android:background="@drawable/round_edittext"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="0.65"
                    android:maxLines="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/min_price"
                    android:id="@+id/stringMin"
                    android:textColor="#ffffff"
                    android:layout_marginRight="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtMin"
                    android:background="@drawable/round_edittext"
                    android:layout_weight="0.40"
                    android:layout_marginRight="5dp"
                    android:maxLines="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/max_price"
                    android:id="@+id/stringMax"
                    android:textColor="#ffffff"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="0dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtMax"
                    android:background="@drawable/round_edittext"
                    android:layout_weight="0.40"
                    android:layout_marginRight="0dp"
                    android:maxLines="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="1"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/search_radius"
                    android:id="@+id/textView"
                    android:textColor="#ffffff"
                    android:layout_marginRight="5dp" />

                <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar"
                    android:foregroundTint="#ffffff"
                    android:layout_weight="0.96"
                    android:progress="50"
                    android:indeterminate="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="xx km"
                    android:id="@+id/txtRadius"
                    android:textColor="#ffffff" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundedborderlayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/categories"
                    android:id="@+id/textView3"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="110dp"
                    android:layout_marginTop="5dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category1"
                        android:id="@+id/cbShows"
                        android:textColor="#ffffff"
                        android:buttonTint="#ffffff"
                        android:checked="true"
                        android:hint="shows" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category2"
                        android:id="@+id/cbBaladas"
                        android:textColor="#ffffff"
                        android:layout_marginLeft="30dp"
                        android:buttonTint="#ffffff"
                        android:checked="true"
                        android:hint="baladas" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category3"
                        android:id="@+id/cbMuseus"
                        android:textColor="#ffffff"
                        android:buttonTint="#ffffff"
                        android:checked="true"
                        android:hint="museus" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category4"
                        android:id="@+id/cbEsportes"
                        android:textColor="#ffffff"
                        android:layout_marginLeft="30dp"
                        android:buttonTint="#ffffff"
                        android:checked="true"
                        android:hint="esportes" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category5"
                        android:id="@+id/cbBotecos"
                        android:textColor="#ffffff"
                        android:buttonTint="#ffffff"
                        android:checked="true"
                        android:hint="botecos" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category6"
                        android:id="@+id/cbRua"
                        android:textColor="#ffffff"
                        android:layout_marginLeft="30dp"
                        android:buttonTint="#ffffff"
                        android:checked="true"
                        android:hint="narua" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_search_string"
                android:id="@+id/btSearch"
                android:background="@drawable/mybutton"
                android:textColor="#000000"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_marginLeft="70dp"
            android:visibility="invisible"
            android:background="@drawable/roundedborderlayout"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scrollLayout"
                android:visibility="invisible">

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
